--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,34 @@
 <resources>
     <string name="app_name">Dogedex</string>
+    <string name="female">Female</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
+    <string name="group">Group</string>
+    <string name="male">Male</string>
+    <string name="error_showing_dog_not_found">Error showing dog, dog not found</string>
+    <string name="dog_index_format">#%d</string>
+    <string name="dog_life_expectancy_format">%s years</string>
+    <string name="unknown_host_exception_error">No hay internet</string>
+    <string name="unknown_error">Error desconocido</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="do_not_have_an_account">Do not have an account?</string>
+    <string name="register">Register</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="email_is_not_valid">Email is not valid</string>
+    <string name="password_must_not_be_empty">Password must not be empty</string>
+    <string name="passwords_do_not_match">Passwords do not match</string>
+    <string name="error_sign_up">Error signing up</string>
+    <string name="error_sign_in">Error logging in</string>
+    <string name="user_already_exists">User already exists</string>
+    <string name="there_was_an_error">There was an error</string>
+    <string name="wrong_user_or_password">Wrong user or password</string>
+    <string name="button_for_list">Button for list</string>
+    <string name="button_for_camera">Button for camera</string>
+    <string name="button_for_settings">Button for settings</string>
+    <string name="logout">Logout</string>
 </resources>
