--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="dog_index_format">#%d</string>
     <string name="dog_life_expectancy_format">%s years</string>
     <string name="unknown_host_exception_error">No hay internet</string>
-    <string name="unknown_error">Error desconocido</string>
+    <string name="unknown_error">There was an error</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="email">Email</string>
@@ -31,4 +31,5 @@
     <string name="button_for_camera">Button for camera</string>
     <string name="button_for_settings">Button for settings</string>
     <string name="logout">Logout</string>
+    <string name="error_adding_dog">There was an error adding dog to collection</string>
 </resources>
